<resources>
    <string name="app_name">MyPhotoStamp</string>
    <string name="registar"><u>Clique para registar</u></string>
    <string name="pass">Palavra chave</string>
    <string name="utilizador">Nome do utlizador</string>
    <string name="email">Email</string>
    <string name="localidade">Localidade</string>
    <string name="morada">Morada</string>
    <string name="c_digo_postal">Código Postal*</string>
    <string name="porta">Porta (Mencionar andar)*</string>
    <string name="user">Username</string>
    <string name="foto">Foto de Perfil</string>
    <string name="confirmar_chave">Confirmar chave</string>
</resources>
