<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registarUser"
    android:background="@color/background"
    android:orientation="vertical">

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin">

        <EditText
            android:id="@+id/nome"
            android:inputType="text"
            android:autofillHints="@string/utilizador"
            android:layout_marginTop="@dimen/title"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/utilizador"
            android:textSize="@dimen/paragraph"/>

        <EditText
            android:id="@+id/username"
            android:inputType="text"
            android:autofillHints="@string/utilizador"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nome"
            android:hint="@string/user"
            android:textSize="@dimen/paragraph"/>

        <EditText
            android:id="@+id/password"
            android:inputType="textPassword"
            android:autofillHints="@string/pass"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/username"
            android:hint="@string/pass"
            android:textSize="@dimen/paragraph" />

        <EditText
            android:id="@+id/repassword"
            android:inputType="textPassword"
            android:autofillHints="@string/confirmar_chave"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_chave"
            android:textSize="@dimen/paragraph"
            android:layout_below="@+id/password" />

        <EditText
            android:id="@+id/email"
            android:inputType="textEmailAddress"
            android:autofillHints="@string/email"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:textSize="@dimen/paragraph"
            android:layout_below="@+id/repassword"/>

        <EditText
            android:id="@+id/localidade"
            android:inputType="text"
            android:autofillHints="@string/localidade"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/localidade"
            android:textSize="@dimen/paragraph"
            android:layout_below="@+id/email" />

        <EditText
            android:id="@+id/morada"
            android:inputType="text"
            android:autofillHints="@string/morada"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/morada"
            android:layout_below="@+id/localidade"
            android:textSize="@dimen/paragraph"/>


        <EditText
            android:id="@+id/codigo_postal"
            android:inputType="text"
            android:autofillHints="@string/c_digo_postal"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/c_digo_postal"
            android:layout_below="@+id/morada"
            android:textSize="@dimen/paragraph"/>

        <EditText
            android:id="@+id/porta"
            android:inputType="text"
            android:autofillHints="@string/porta"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/porta"
            android:textSize="@dimen/paragraph"
            android:layout_below="@+id/codigo_postal" />

    <ImageView
        android:id="@+id/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_margin"
        android:background="@drawable/upload"
        android:layout_below="@+id/porta" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/layout_margin"
        android:paddingTop="@dimen/title"
        android:layout_alignBottom="@+id/upload"
        android:textColor="@color/black"
        android:textSize="@dimen/paragraph"
        android:paddingBottom="@dimen/layout_margin"
        android:layout_toRightOf="@+id/upload"
        android:text="@string/foto"/>

    <ImageView
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upload"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginStart="@dimen/layout_margin"
        android:background="@drawable/back"/>


    <ImageView
        android:id="@+id/log"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/upload"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/layout_margin"
        android:layout_marginEnd="@dimen/layout_margin"
        android:background="@drawable/enter"/>

        <Button
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/layout_margin"
            android:layout_below="@+id/log"
            android:visibility="invisible"
            android:layout_height="match_parent"/>

    </RelativeLayout>


</ScrollView>

</RelativeLayout>
