<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginLeft=  "@dimen/layout_margin"
        android:layout_marginBottom="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/username"
        android:inputType="text"
        android:autofillHints="@string/utilizador"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user"
        android:textSize="@dimen/paragraph"/>

    <EditText
        android:id="@+id/password"
        android:inputType="textPassword"
        android:autofillHints="@string/pass"
        android:layout_marginTop="@dimen/small_padding"
        android:layout_marginLeft="@dimen/layout_margin"
        android:layout_marginRight="@dimen/layout_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/pass"
        android:textSize="@dimen/paragraph"/>

        <TextView
            android:id="@+id/registar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_padding"
            android:layout_marginLeft="@dimen/layout_margin"
            android:layout_marginBottom="@dimen/layout_margin"
            android:layout_marginRight="@dimen/layout_margin"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/higher_paragraph"
            android:text="@string/registar"/>

    </LinearLayout>

    <ImageView
            android:id="@+id/log"
            android:layout_below="@+id/layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/layout"
            android:background="@drawable/enter"/>



</RelativeLayout>

